change dark mode colour theme and some small fixes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -84,12 +84,12 @@ img {
   margin-bottom: 40px;
   padding: 0;
   li {
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 1px solid var(--global-border-color);
     list-style: none;
     padding-top: 2rem;
     padding-bottom: 2rem;
     .post-meta {
-      color: $grey-color;
+      color: var(--global-secondary-text-color);
       font-size: 0.875rem;
       margin-bottom: 0;
     }
@@ -106,7 +106,7 @@ img {
 // navbar customisation
 .navbar {
   box-shadow: none;
-  border-bottom: 1px solid $grey-color-light;
+  border-bottom: 1px solid var(--global-border-color);
   opacity: 0.95;
   background-color: var(--global-bg-color);
 }
@@ -205,7 +205,7 @@ footer.fixed-bottom {
   a {
     color: var(--global-footer-link-color);
     &:hover {
-      color: pink;
+      color: var(--global-bg-color);
       text-decoration: none;
     }
   }
